--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ rvm:
   - rbx-2
   - ruby-head
   - jruby-head
-before_install: gem install bundler
 
+env:
+  - TRAVIS_CI=true
+
+before_install: gem install bundler
 bundler_args: --jobs=4 --retry=5
 
 deploy:
